--- a/src/pages/UserDashboard2.css
+++ b/src/pages/UserDashboard2.css
@@ -74,8 +74,7 @@ h3 {
 /* ===== MAIN CONTENT ===== */
 .user-main-content {
   /* flex: 1; Take up all remaining vertical space */
-  overflow-y: auto;
-  /* Enable vertical scrolling */
+  overflow-y: auto;/* Enable vertical scrolling */
   scroll-behavior: smooth;
   /* display: flex; */
   flex-direction: column;
@@ -91,10 +90,8 @@ h3 {
   background-color: var(--bg-light);
 
   /* Custom Scrollbar */
-  scrollbar-width: none;
-  /* Firefox */
-  scrollbar-color: white gray;
-  /* thumb track */
+  scrollbar-width: none;/* Firefox */
+  scrollbar-color: white gray;/* thumb track */
 }
 
 /* Top and bottom blur shadows */
@@ -730,6 +727,7 @@ h3 {
   .user-main-dash {
     left: 5px;
     border-radius:0 0 10px 10px;
+    border-width: 0px 2px 2px 2px;
 
   }
 
