--- a/src/components/CommentSection.css
+++ b/src/components/CommentSection.css
@@ -1,11 +1,19 @@
 .comment-section {
   max-width: 100%;
-  max-width: 700px;
   margin: 2rem auto;
-  background: #f9f9f9;
+  background: var(--bg-light2);
   padding: 1rem 1.5rem;
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+.dark .comment-section{
+    background: var(--bg-dark2);
+}
+.comment-section h2 {
+  color: var(--text-light);
+}
+.dark .comment-section h2 {
+  color: var(--text-dark);
 }
 
 .comment-input,
@@ -51,7 +59,7 @@
 
 .reply-section {
   margin-top: 10px;
-  padding-left: 20px;
+  padding-left: 40px;
 }
 
 .reply {
@@ -59,6 +67,8 @@
   margin-top: 6px;
   padding: 6px 10px;
   border-radius: 6px;
+  border: 1px solid #7321ed;
+
 }
 
 .reply-toggle {
