--- a/src/components/AdminComponent/RegisteredUsers.css
+++ b/src/components/AdminComponent/RegisteredUsers.css
@@ -4,12 +4,13 @@
     padding: 30px;
     border-radius: 20px;
     animation: fadeSlideIn 0.8s ease forwards;
-    color: var(--text-light);
-  }
-  .dark .registered-users-container{
-    /* background:var(--bg-dark2); */
-    color:var(--text-dark);
-  }
+}
+.registered-users-container h2{
+  color: var(--text-light);
+}
+.dark .registered-users-container h2{
+  color:var(--text-dark);
+}
   
   .user-table-section {
     margin-bottom: 50px;
@@ -33,21 +34,47 @@
     background: rgba(255, 255, 255, 0.7);
   }
   
-  .action-buttons button {
-    background-color: #1e90ff;
-    color: white;
-    padding: 10px 20px;
-    margin-left: 10px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-weight: 600;
-    transition: background-color 0.3s;
-  }
- 
-  .action-buttons button:hover {
-    background-color: #0b78e3;
-  }
+.hide-btn{
+  border: none;
+  padding: 10px;
+  background: #34ddda;
+  margin-right: 5px;
+}
+/* Export Buttons */
+.export-controls {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 2rem;
+}
+
+.export-btn,
+.print-btn {
+  padding: 10px 20px;
+  font-size: 15px;
+  font-weight: 500;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.export-btn {
+  background-color: #4f46e5;
+  color: #fff;
+}
+
+.export-btn:hover {
+  background-color: #4338ca;
+}
+
+.print-btn {
+  background-color: #10b981;
+  color: #fff;
+}
+
+.print-btn:hover {
+  background-color: #059669;
+}
   
   .users-table {
     width: 100%;
