--- a/src/pages/UserPages/EventViewPage.css
+++ b/src/pages/UserPages/EventViewPage.css
@@ -130,7 +130,7 @@
 }
 
 /* ==== Rating Stars ==== */
-.rating-container {
+.view-rating-container {
   display: flex;
   align-items: center;
   gap: 5px;
